gtl ver