@@ -5,20 +5,17 @@ import appeng.api.stacks.AEFluidKey;
 import appeng.api.stacks.AEItemKey;
 import appeng.api.stacks.GenericStack;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
-import com.gregtechceu.gtceu.api.gui.widget.SlotWidget;
-import com.gregtechceu.gtceu.api.gui.widget.TankWidget;
-import com.gregtechceu.gtceu.api.transfer.fluid.CustomFluidTank;
-import com.gregtechceu.gtceu.api.transfer.item.CustomItemStackHandler;
-import com.gregtechceu.gtceu.utils.GTMath;
-import com.lowdragmc.lowdraglib.gui.widget.LabelWidget;
-import com.lowdragmc.lowdraglib.gui.widget.Widget;
-import com.lowdragmc.lowdraglib.gui.widget.WidgetGroup;
+import com.lowdragmc.lowdraglib.gui.widget.*;
+import com.lowdragmc.lowdraglib.misc.FluidStorage;
+import com.lowdragmc.lowdraglib.side.fluid.FluidStack;
 import net.minecraft.client.Minecraft;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.Nullable;
+import org.leodreamer.wildcard_pattern.gui.NaiveItemTransfer;
 import org.leodreamer.wildcard_pattern.lang.DataGenScanned;
 import org.leodreamer.wildcard_pattern.lang.RegisterLanguage;
+import org.leodreamer.wildcard_pattern.util.MathUtils;
 import org.leodreamer.wildcard_pattern.wildcard.WildcardPatternLogic;
 
 import java.util.Arrays;
@@ -46,7 +43,7 @@ public class WildcardIndexPage extends WidgetGroup {
         addWidget(new LabelWidget((width - fontWidth) / 2, 5, component.getString()));
 
         initPatternDisplay();
-        displayPattern(patterns.isEmpty() ? null : patterns.getFirst());
+        displayPattern(patterns.isEmpty() ? null : patterns.get(0));
     }
 
     private void initPatternDisplay() {
@@ -95,20 +92,22 @@ public class WildcardIndexPage extends WidgetGroup {
         for (int r = 0; r < 2; r++) {
             for (int c = 0; c < 3; c++) {
                 if (!iterator.hasNext()) {
-                    var slot = new SlotWidget(new CustomItemStackHandler(), 0, 18 * c, 18 * r, false, false);
+                    var slot = new SlotWidget(new NaiveItemTransfer(), 0, 18 * c, 18 * r, false, false);
                     group.addWidget(slot);
                     continue;
                 }
 
                 var next = iterator.next();
                 if (next.what() instanceof AEItemKey item) {
-                    var slot = new SlotWidget(new CustomItemStackHandler(), 0, 18 * c, 18 * r, false, false);
-                    slot.setItem(item.toStack(GTMath.saturatedCast(next.amount())));
+                    var slot = new SlotWidget(new NaiveItemTransfer(), 0, 18 * c, 18 * r, false, false);
+                    var handler = slot.getHandler();
+                    if (handler == null) continue;
+                    handler.set(item.toStack(MathUtils.saturatedCast(next.amount())));
                     group.addWidget(slot);
                 } else if (next.what() instanceof AEFluidKey fluid) {
-                    var handler = new CustomFluidTank(Integer.MAX_VALUE);
-                    handler.setFluid(fluid.toStack(GTMath.saturatedCast(next.amount())));
-                    var slot = new TankWidget(handler, 18 * c, 18 * r, false, false)
+                    var storage = new FluidStorage(Integer.MAX_VALUE);
+                    storage.setFluid(FluidStack.create(fluid.getFluid(), MathUtils.saturatedCast(next.amount())));
+                    var slot = new TankWidget(storage, 18 * c, 18 * r, false, false)
                         .setBackground(GuiTextures.SLOT).setClientSideWidget();
                     group.addWidget(slot);
                 }
