@@ -4,7 +4,6 @@ import com.gregtechceu.gtceu.api.GTCEuAPI;
 import com.gregtechceu.gtceu.api.data.chemical.material.Material;
 import com.gregtechceu.gtceu.api.data.chemical.material.properties.PropertyKey;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
-import com.gregtechceu.gtceu.api.transfer.item.CustomItemStackHandler;
 import com.gregtechceu.gtceu.common.data.GTMaterials;
 import com.lowdragmc.lowdraglib.gui.editor.ColorPattern;
 import com.lowdragmc.lowdraglib.gui.texture.IGuiTexture;
@@ -16,6 +15,7 @@ import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.NotNull;
 import org.leodreamer.wildcard_pattern.api.IMaterialProperties;
+import org.leodreamer.wildcard_pattern.gui.NaiveItemTransfer;
 import org.leodreamer.wildcard_pattern.gui.PhantomGTMaterialSlot;
 import org.leodreamer.wildcard_pattern.lang.DataGenScanned;
 import org.leodreamer.wildcard_pattern.lang.RegisterLanguage;
@@ -45,7 +45,7 @@ public class PropertyFilterComponent implements IWildcardFilterComponent {
         .setColor(ColorPattern.ORANGE.color);
 
     private static final PropertyKey<?>[] ALL_PROPERTY_KEYS = new PropertyKey[] { EMPTY, BLAST, ALLOY_BLAST, DUST,
-        FLUID_PIPE, FLUID, GEM, INGOT, POLYMER, ITEM_PIPE, ORE, TOOL, ARMOR, ROTOR, WIRE, WOOD, HAZARD };
+        FLUID_PIPE, FLUID, GEM, INGOT, POLYMER, ITEM_PIPE, ORE, TOOL, ROTOR, WIRE, WOOD, HAZARD };
 
     public static PropertyFilterComponent empty() {
         return new PropertyFilterComponent(EMPTY, GTMaterials.NULL, false);
@@ -75,9 +75,9 @@ public class PropertyFilterComponent implements IWildcardFilterComponent {
         line.setBackground(whitelist ? GROUP_BG_WHITE : GROUP_BG_BLACK);
         parent = line;
 
-        exampleSlot = new PhantomGTMaterialSlot(new CustomItemStackHandler(), 0, 3, 3, this::changeExample);
         propertySelector = new MySelectorWidget(25, 5, 80, 15, getMaterialPropertyNames(example));
         propertySelector.setOnChanged(this::updateProperty);
+        exampleSlot = new PhantomGTMaterialSlot(new NaiveItemTransfer(), 0, 3, 3, this::changeExample);
 
         if (example != GTMaterials.NULL) {
             exampleSlot.setMaterial(example);
@@ -99,8 +99,8 @@ public class PropertyFilterComponent implements IWildcardFilterComponent {
             this.example = material;
             var flags = getMaterialPropertyNames(material);
             propertySelector.setCandidates(flags);
-            propertySelector.setValue(flags.getFirst());
-            updateProperty(flags.getFirst());
+            propertySelector.setValue(flags.get(0));
+            updateProperty(flags.get(0));
         }
         return ok;
     }
